Fixed spacing of dropdowns on different screen sizes

--- a/app/assets/stylesheets/components/headings.scss
+++ b/app/assets/stylesheets/components/headings.scss
@@ -45,7 +45,7 @@
 
   .dropdown,
   .pull-right {
-    line-height: 45.1px;
+    line-height: 33px; // h1 font size * 1.1
     position: relative;
     z-index: 1;
   }
@@ -54,7 +54,12 @@
 @media screen and (min-width: $screen-sm-min) {
   .header-container {
     h1 {
-      font-size: 38px
+      font-size: 38px;
+    }
+
+    .dropdown,
+    .pull-right {
+      line-height: 41.8px; // h1 font size * 1.1
     }
   }
 }
@@ -63,6 +68,11 @@
   .header-container {
     h1 {
       font-size: 41px
+    }
+
+    .dropdown,
+    .pull-right {
+      line-height: 45.1px; // h1 font size * 1.1
     }
   }
 }
